fixed nav icons alignment

--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ nav {
 }
 
 .icons-list button {
+  display: flex;
   cursor: pointer;
   background-color: transparent;
   border: none;
